--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.17.3",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
 }
