--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "es6-promise": "^4.2.8",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
